test/patterns_bak/s0035_search_insert_position/hafis/starchat/jml_syntax_checking.txt
./test/s0035_search_insert_position/hafis/starchat/Solution.java:14: error: bad operand types for binary operator '<='
//@ requires(\forall int i; 0 <= i < nums.length; ((nums <= 10000) && (nums >= -10000)));
                                                         ^
  first type:  int[]
  second type: int
./test/s0035_search_insert_position/hafis/starchat/Solution.java:14: error: bad operand types for binary operator '>='
//@ requires(\forall int i; 0 <= i < nums.length; ((nums <= 10000) && (nums >= -10000)));
                                                                            ^
  first type:  int[]
  second type: int
./test/s0035_search_insert_position/hafis/starchat/Solution.java:19: error: array required, but int found
//@ ensures(((\forall int i; 0 <= i < nums.length; nums[i] == 1[i]) && (target == 0)) ==> (\result == 0));
                                                              ^
3 errors
